erDiagram
    ADMINS {
        ObjectId _id
        string username
        string password "SHA-256 hash"
    }
    
    USERS {
        ObjectId _id
        string username
        string password "SHA-256 hash"
    }
    
    PRODUCTS {
        ObjectId _id
        string name
        float price
        string category
    }
    
    BUDGETS {
        ObjectId _id
        ObjectId userId
        date creationDate
        array items "Productos y cantidades"
        float totalAmount
    }
    
    USERS ||--o{ BUDGETS : creates
    BUDGETS }o--|| PRODUCTS : contains
